--- a/app/src/main/res/menu/dashboard_activity_main_drawer.xml
+++ b/app/src/main/res/menu/dashboard_activity_main_drawer.xml
@@ -13,7 +13,11 @@
             android:icon="@drawable/ic_baseline_leaderboard"
             android:title="@string/leaderboard"
             />
-
+        <item
+            android:id="@+id/logout"
+            android:icon="@drawable/logout"
+            android:title="@string/logout"
+            />
  <!--       <item
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
