--- a/app/src/main/res/layout/dashboard_allapplications_item_layout.xml
+++ b/app/src/main/res/layout/dashboard_allapplications_item_layout.xml
@@ -7,7 +7,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+    >
+
 
         <ImageView
             android:id="@+id/appIcon"
